# image-processor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  requirements.txt
accounts/: serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
images/: admin.py  models.py  paginations.py  permissions.py  rate_limiting.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
utils/: helpers.py
